# mtgtop8

./: README.md  pyproject.toml
mtgtop8/: __init__.py
tests/: test_mtgtop8.py
