[tool.poetry]
name = "mtgtop8"
version = "0.1.0"
description = "A web scraping tool for MTGTop8.com."
license = "MIT"
authors = ["Aphosis <aphosis.github@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Aphosis/mtgtop8"
repository = "https://github.com/Aphosis/mtgtop8"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
toml = "^0.10.2"
black = "^20.8b1"
isort = "^5.6.4"
pytest-cov = "^2.10.1"
pre-commit = "^2.9.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules --cov=mtgtop8 --cov-report html"
testpaths = [
    "tests",
    "mtgtop8",
]
